# aern2

./: .gitignore  LICENSE  README.md  README.rst  stack.yaml
aern2-bench-chart/: ChartScaledLogAxis.hs  ChartTweaks.hs  LICENCE  Main.hs  aern2-bench-chart.cabal
aern2-demos/: .gitignore  README.md  aern2-demos.cabal
aern2-demos/attic/: ClosestPairA.hs  EffortConcept1.hs  Sort.hs
aern2-demos/src/: BenchMain.hs  CIDR.hs  ClosestPairDist.hs  Demos.hs  ERC.hs  Introduction.hs
aern2-demos/src/BenchTasks/: Fourier.hs
aern2-demos/src/ERC/: Array.hs  Examples.hs  Integer.hs  Logic.hs  Monad.hs  Pair.hs  Real.hs  Statements.hs  Variables.hs
aern2-demos/src/Tasks/: Logistic.hs
aern2-erc/: LICENSE  README.md  aern2-erc.cabal  package.yaml
aern2-erc/src/ERC/: Array.hs  Examples.hs  Integer.hs  Logic.hs  Monad.hs  Pair.hs  Real.hs  Statements.hs  Variables.hs
aern2-fnreps/: LICENCE  LICENSE  README.md  README.rst  aern2-fnreps.cabal
aern2-fnreps/benchresults/: README-charts.txt  range.html  results-ppoly-test-chp-cdar.csv  results-ppoly-test-chp-mpfr.csv  results-ppoly-test-chpbnds-cdar.csv  results-ppoly-test-chpbnds-mpfr.csv  results-ppoly-test-pb-cdar.csv  results-ppoly-test-pb-mpfr.csv  results-test.csv  results.csv  rootIsolation.html  runBench.sh  runFun.sh
aern2-fnreps/cca2016/diagrams/reprs/: hat-reprs.tgz
aern2-fnreps/main/: Demo.hs  Main.hs  fnreps-bounds.hs  fnreps-ops.hs  range-bench.hs  rootIsolation-bench.hs  waac-benchmarks.hs
aern2-fnreps/plots/: bumpy.ct2  bumpy2.ct2  fracSin.ct2  fracSinSC.ct2  function.ct2.template  makect2.sh  runge.ct2  rungeSC.ct2  sine+cos  sine+cos-integrate.csv  sine+cos-max.csv  sine+cos.ct2  sine+cospi.ct2  sinesine+cos.ct2  sinesine-integrate.csv  sinesine-integrate.url  sinesine-max.csv  sinesine.ct2
aern2-fnreps/src/: Main.hs
aern2-fnreps/src/FnReps/: Fun.hs  FunctionAbstraction.hs
aern2-fnreps/src/FnReps/Polynomial/: UnaryChebSparse.hs  UnaryChebSparseBall.hs  UnaryPowerBase.hs  UnaryPowerDense.hs
aern2-fun/: README.md  aern2-fun.cabal  package.yaml
aern2-fun-plot/: aern2-fun-plot.cabal
aern2-fun-plot/assets/: index.html
aern2-fun-plot/client/: Api.elm  DInterval.elm  GenerateElm.hs  Main.elm  Makefile  elm-package.json
aern2-fun-plot/example/: Main.hs
aern2-fun/bench/: .gitignore  aern2-fun-chPoly-benchOp.hs  bench-ChPolys-10-1000.hss  bench-ChPolys-20-1000.hss  runBench.sh
aern2-fun/data/: aern2-fun-chPoly-serialise.hs  aern2-fun-serialise.hs
aern2-fun/src/AERN2/: Analytic.hs  Frac.hs  Interval.hs  Local.hs  PPoly.hs  PQueue.hs  Poly.hs  TH.hs
aern2-fun/src/AERN2/Analytic/: Field.hs  Type.hs
aern2-fun/src/AERN2/AnalyticMV/: Type.hs
aern2-fun/src/AERN2/Frac/: Conversion.hs  Eval.hs  Field.hs  Integration.hs  Maximum.hs  Ring.hs  Type.hs
aern2-fun/src/AERN2/Local/: Basics.hs  DPoly.hs  Field.hs  Frac.hs  Integration.hs  Maximum.hs  PPoly.hs  Poly.hs  Ring.hs  SineCosine.hs
aern2-fun/src/AERN2/PPoly/: Division.hs  Eval.hs  Integration.hs  Maximum.hs  MinMax.hs  Tests.hs  Type.hs
aern2-fun/src/AERN2/Poly/: Ball.hs  Basics.hs  Cheb.hs  Conversion.hs  Power.hs
aern2-fun/src/AERN2/RealFun/: Classes.hs  Fun.hs  Operations.hs  SineCosine.hs  Tests.hs  UnaryBallDFun.hs  UnaryBallFun.hs  UnaryDFun.hs  UnaryFun.hs  (+1 more)
aern2-fun/test/AERN2/: PolySpec.hs
aern2-mfun/: DReal.hs  DRealRunner.hs  LICENSE  LPPaver.hs  MetiTarski.hs  MetiTarskiRunner.hs  PrettifyWhy3.hs  README.md  aern2-mfun.cabal  package.yaml
aern2-mfun/bench/: Heron.hs  OptimisationBenchmark.hs
aern2-mfun/src/AERN2/: Box.hs
aern2-mp/: LICENSE  README.md  aern2-mp.cabal  changelog.md  package.yaml  runtest
aern2-mp/bench/: BallOps.hs  aern2-mp-bench-BallOps.html
aern2-mp/bench/old/: BallOps.hs  BallOpsSpace.hs  Values.hs  aern2-mp-benchOp.hs  cabal
aern2-mp/old/: ElementaryFromField.hs  Native.hs
aern2-mp/old/Native/: Dyadic.hs
aern2-mp/src/AERN2/: Kleenean.hs  Limit.hs  MP.hs  Norm.hs  Normalize.hs  Select.hs
aern2-mp/test/: DummyMain.hs
aern2-net/: LICENSE  aern2-net.cabal  package.yaml
aern2-net/bench/: aern2-real-benchOp.hs  aern2-real-cdar-simpleOp.hs  fieldops.csv
aern2-net/bench/ireal/: fieldops.csv  logistic.csv
aern2-net/bench/native/: fieldops.csv
aern2-net/old/: Effort.hs  Tolerant.hs
aern2-net/retired/: MPBall.hs
aern2-net/src/AERN2/: AccuracySG.hs  Net.hs  Sequence.hs  WithGlobalParam.hs
aern2-net/test/AERN2/: RealSpec.hs
aern2-net/tools/: aern2-generate-netlog.hs
aern2-net/tools/visualise-netlog/: QANetLog.elm  elm-package.json  index.html  main.js  netlog.js-link  nodepos-fft-n4.js
aern2-num/: aern2-num.cabal
aern2-num/retired/: Operations.hs  StrategyClassesMockup3.hs
aern2-num/src/: EffortAccuracyMockup.hs  StrategyClassesMockup2.hs  StrategyClassesMockup3.hs
aern2-num/src/AERN2/: Net.hs  Num.hs  NumPreludeCompatible.hs  RealFunction.hs
aern2-real/: LICENSE  README.md  aern2-real.cabal  changelog.md  package.yaml
aern2-real/attic/: Sort.hs
aern2-real/bench/: aern2-real-benchOp.hs  aern2-real-simpleOp.hs  logistic.csv  ops.csv  results.csv  runBench.sh
aern2-real/bench/ireal/: ops.csv
aern2-real/bench/native/: logistic.csv
aern2-real/examples/: ClosestPairDist.hs
aern2-real/old/: Effort.hs  Tolerant.hs
aern2-real/src/AERN2/: AccuracySG.hs  Complex.hs  Effort.hs  Limit.hs  MPBallWithGlobalPrec.hs  QA.hs  Real.hs  Sequence.hs
aern2-real/test/AERN2/: RealSpec.hs
aern2-real/tools/: aern2-generate-netlog.hs
aern2-real/tools/visualise-netlog/: Main.elm  elm-package.json  netlog-fft-n2.json  netlog-fft-n4.json  netlog-fft-par-n2.json  netlog-fft-par-n4.json  netlog.json  netlog.json-link  nodepos-fft-n2.js  nodepos-fft-n2.json  nodepos-fft-n4.json  nodepos.json
distributed-pilot/: LICENSE  distributed-pilot.cabal  test.sh
distributed-pilot/src/: Main.hs  Test.hs
ireal-benchOp/: LICENSE  ireal-benchOp.cabal
ireal-benchOp/src/: Main.hs
mixed-types-num/: LICENSE  mixed-types-num.cabal
mixed-types-num/src/Numeric/: MixedTypes.hs
resultsCsvToCharts/: Main.hs  resultsCsvToCharts.cabal
test-record/: test-record.cabal
test-record/src/: Main.hs
(+1534 files in other folders)
