Name:           aern2-demos
version:        0.1.0.0
cabal-version:  >= 1.9.2
build-type:     Simple
homepage:       https://github.com/michalkonecny/aern2/aern2-demos
author:         Michal Konecny
maintainer:     Michal Konecny <mikkonecny@gmail.com>
copyright:      (c) 2017 Michal Konecny
license:        BSD3
license-file:   LICENSE
stability:      experimental
tested-with:    GHC==7.10.3, GHC==8.0.2
category:       Math
Synopsis:       Various examples and experiments
Description:    Various examples and experiments

library
  build-depends:
    base >= 4
    , containers
    , stm
    , QuickCheck
    , mixed-types-num >= 0.3.1 && < 0.4
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
  hs-source-dirs:  src
  ghc-options:     -O2 -Wall -rtsopts -threaded
  extensions:
        RebindableSyntax,
        Arrows, FlexibleContexts, TypeOperators, TypeFamilies, MultiParamTypeClasses
        ConstraintKinds, ScopedTypeVariables, FlexibleInstances
  exposed-modules:
    Demos
    Tasks.LogisticPreludeOps
    Tasks.Logistic
    Tasks.Fourier
    CIDR
    -- EffortConcept1

executable aern2-demos-run-bench
  build-depends:
    base >= 4
    , containers
    , stm
    , QuickCheck
    , mixed-types-num >= 0.3.1 && < 0.4
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
    , aern2-demos == 0.1.*
  hs-source-dirs:  src
  ghc-options:     -O2 -Wall -rtsopts -threaded
  extensions:
        RebindableSyntax,
        Arrows, FlexibleContexts, TypeOperators, TypeFamilies, MultiParamTypeClasses
        ConstraintKinds, ScopedTypeVariables, FlexibleInstances
  main-is: BenchMain.hs
  other-modules:
    Demos
    Tasks.LogisticPreludeOps
    Tasks.Logistic
    Tasks.Fourier
    CIDR
    -- EffortConcept1

-- executable aern2-demoPar
--   build-depends:
--     base >= 4
--     , containers
--     , parallel, deepseq
--     , mixed-types-num >= 0.3.1 && < 0.4
--     , aern2-mp == 0.1.*
--     , aern2-real == 0.1.*
--   hs-source-dirs:  src
--   ghc-options:     -O2 -Wall -rtsopts -threaded
--   extensions:
--         RebindableSyntax,
--         Arrows, FlexibleContexts, TypeOperators, TypeFamilies, ConstraintKinds, ScopedTypeVariables
--   main-is: DemoPar.hs
