Name:           aern2-demos
version:        0.1.0.0
cabal-version:  >= 1.9.2
build-type:     Simple
homepage:       https://github.com/michalkonecny/aern2
author:         Michal Konecny
maintainer:     Michal Konecny <mikkonecny@gmail.com>
copyright:      (c) 2017-2019 Michal Konecny
license:        BSD3
license-file:   LICENSE
stability:      experimental
category:       Math
Synopsis:       Various examples and experiments
Description:    Various examples and experiments

library
  build-depends:
    base >= 4
    , containers
    , primitive
    , transformers
    , mtl
    , STMonadTrans
    , stm
    , QuickCheck
    , mixed-types-num >= 0.4
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -fno-warn-missing-signatures -fno-warn-partial-type-signatures
  extensions:
        RebindableSyntax,
        Arrows, FlexibleContexts, TypeOperators, TypeFamilies, MultiParamTypeClasses
        ConstraintKinds, ScopedTypeVariables, FlexibleInstances
        PartialTypeSignatures
  exposed-modules:
    Introduction
    ClosestPairDist
    BenchTasks.Logistic
    BenchTasks.Fourier
    CIDR
    ERC.Monad
    ERC.Variables
    ERC.Logic
    ERC.Statements
    ERC.Integer
    ERC.Real
    ERC.Pair
    ERC.Array
    ERC.Examples
    -- Sewon
    -- EffortConcept1

executable aern2-demos-run-bench
  build-depends:
    base >= 4
    , containers
    , stm
    , QuickCheck
    , mixed-types-num >= 0.4
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -fno-warn-missing-signatures -fno-warn-partial-type-signatures
  extensions:
        RebindableSyntax,
        Arrows, FlexibleContexts, TypeOperators, TypeFamilies, MultiParamTypeClasses
        ConstraintKinds, ScopedTypeVariables, FlexibleInstances
        PartialTypeSignatures
  main-is: BenchMain.hs
  other-modules:
    ClosestPairDist
    BenchTasks.Logistic
    BenchTasks.Fourier
    CIDR
    -- EffortConcept1

-- executable aern2-demoPar
--   build-depends:
--     base >= 4
--     , containers
--     , parallel, deepseq
--     , mixed-types-num >= 0.3.1 && < 0.4
--     , aern2-mp == 0.1.*
--     , aern2-real == 0.1.*
--   hs-source-dirs:  src
--   ghc-options:     -Wall -rtsopts -threaded
--   extensions:
--         RebindableSyntax,
--         Arrows, FlexibleContexts, TypeOperators, TypeFamilies, ConstraintKinds, ScopedTypeVariables
--   main-is: DemoPar.hs
