Name:           aern2-erc
version:        0.1.0.0
cabal-version:  >= 1.9.2
build-type:     Simple
homepage:       https://github.com/michalkonecny/aern2
author:         Michal Konecny, Sewon Park, Martin Ziegler
maintainer:     Michal Konecny <mikkonecny@gmail.com>
copyright:      (c) 2017-2020 Michal Konecny, Sewon Park, Martin Ziegler
license:        BSD3
license-file:   LICENSE
stability:      experimental
category:       Math
Synopsis:       The ERC language and example ERC programs
Description:    The ERC language and example ERC programs

library
  build-depends:
    base >= 4
    , containers
    , transformers
    , mtl
    , STMonadTrans
    , mixed-types-num >= 0.4
    , aern2-mp == 0.1.*
  hs-source-dirs:  src
  ghc-options:     -Wall
  extensions:
    PostfixOperators
    DataKinds
    Rank2Types
    FlexibleContexts
    TypeFamilies
    ScopedTypeVariables
    FlexibleInstances
  exposed-modules:
    ERC.Monad
    ERC.Variables
    ERC.Logic
    ERC.Statements
    ERC.Integer
    ERC.Real
    ERC.Pair
    ERC.Array
    ERC.Examples

