Name:           aern2-fnreps
Version:        0.1
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny, Eike Neumann (Aston University)
Copyright:      (c) 2015, 2016 Michal Konecny, Eike Neumann
Maintainer:     mikkonecny@gmail.com
Homepage:       https://github.com/michalkonecny/aern2
Stability:      experimental
Category:       Data, Math
Synopsis:       compare real function representations
Tested-with:    GHC==7.8.4
Description:    Define and compare various representations of univariate continuous real functions.

Library
  hs-source-dirs:   src
  ghc-options:      -O2 -Wall  -fno-warn-orphans
  Build-Depends:    
        base >= 4.4,
        containers >= 0.3,
        aern2-num == 0.1,
        arithmoi,
        polynomial
  extensions:
                    Arrows,
                    FlexibleContexts,
                    FlexibleInstances,
                    MultiParamTypeClasses,
                    RebindableSyntax,
                    TypeFamilies,
                    TypeOperators
  other-modules:    
                    FnReps.PiecewisePolynomial.UnaryCheb.PPoly.Basics,
                    FnReps.PiecewisePolynomial.UnaryCheb.PPoly.Division,
                    FnReps.PiecewisePolynomial.UnaryCheb.PPoly.Evaluation,
                    FnReps.PiecewisePolynomial.UnaryCheb.PPoly.Integration,
                    FnReps.Polynomial.UnaryCheb.Poly.Basics,
                    FnReps.Polynomial.UnaryCheb.Poly.Bernstein,
                    FnReps.Polynomial.UnaryCheb.Poly.Cheb2Power,
                    FnReps.Polynomial.UnaryCheb.Poly.DCTMultiplication,
                    FnReps.Polynomial.UnaryCheb.Poly.Division,
                    FnReps.Polynomial.UnaryCheb.Poly.EvaluationRootFinding,
                    FnReps.Polynomial.UnaryCheb.Poly.Integration,
                    FnReps.Polynomial.UnaryCheb.Poly.Newman,
                    FnReps.Polynomial.UnaryCheb.Poly.NonSmooth,
                    FnReps.Polynomial.UnaryCheb.Poly.SineCosine,
                    FnReps.Polynomial.UnaryCheb.Poly.SizeReduction,
                    FnReps.Polynomial.UnaryPower.IntPoly.Basics,
                    FnReps.Polynomial.UnaryPower.IntPoly.EvaluationRootFinding,
                    FnReps.Polynomial.UnaryPower.IntPoly.SignedSubresultant,
                    FnReps.Polynomial.UnaryPower.Poly.Basics,
                    FnReps.Polynomial.UnaryPower.Poly.EvaluationRootFinding,
                    FnReps.Polynomial.UnaryPower.Poly.Power2Cheb
  exposed-modules:  
                    FnReps.PiecewisePolynomial.UnaryCheb.PPoly.Benchmarks,
                    FnReps.Polynomial.UnaryCheb.Poly,
                    FnReps.Polynomial.UnaryCheb.PolyBall,
                    FnReps.Polynomial.UnaryCheb.RealFn,
                    FnReps.Polynomial.UnaryPower.Poly

executable aern2-fnreps
  build-depends:   
                   base >= 4.4,
                   containers >= 0.3,
                   arithmoi,
                   aern2-num ==0.1,
                   aern2-fnreps ==0.1
  extensions:
                    Arrows,
                    FlexibleContexts,
                    FlexibleInstances,
                    MultiParamTypeClasses,
                    RebindableSyntax,
                    TypeFamilies,
                    TypeOperators
  hs-source-dirs:  main
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs

