Name:           aern2-fnreps
Version:        0.1
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny, Eike Neumann (Aston University)
Copyright:      (c) 2015, 2016 Michal Konecny, Eike Neumann
Maintainer:     mikkonecny@gmail.com
Homepage:       https://github.com/michalkonecny/aern2
Stability:      experimental
Category:       Data, Math
Synopsis:       compare real function representations
Tested-with:    GHC==7.8.4
Description:    Define and compare various representations of univariate continuous real functions.

executable aern2-fnreps-ops
  build-depends:
    base == 4.*
    -- , arithmoi == 0.4.*
    -- , convertible >= 1.1.1.0 && < 1.2
    -- , lens == 4.13.*
    , psqueues == 0.2.*
    , containers == 0.5.*
    , mixed-types-num == 0.1.*
    , num-exceptions == 0.1.*
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
    , aern2-fun == 0.1.*
  extensions:
                    Arrows,
                    FlexibleContexts,
                    FlexibleInstances,
                    MultiParamTypeClasses,
                    RebindableSyntax,
                    TypeFamilies,
                    TypeOperators
  hs-source-dirs:  main
  ghc-options:     -Wall -rtsopts
  main-is:         fnreps-ops.hs

-- executable aern2-rootIsolation-bench
--   build-depends:
--                    base >= 4.4,
--                    aern2-fnreps ==0.1
--   extensions:
--                     Arrows,
--                     FlexibleContexts,
--                     FlexibleInstances,
--                     MultiParamTypeClasses,
--                     RebindableSyntax,
--                     TypeFamilies,
--                     TypeOperators
--   hs-source-dirs:  main
--   ghc-options:     -Wall -rtsopts
--   main-is:         rootIsolation-bench.hs
--
-- executable aern2-range-bench
--   build-depends:
--                    base >= 4.4,
--                    aern2-fnreps ==0.1
--   extensions:
--                     Arrows,
--                     FlexibleContexts,
--                     FlexibleInstances,
--                     MultiParamTypeClasses,
--                     RebindableSyntax,
--                     TypeFamilies,
--                     TypeOperators
--   hs-source-dirs:  main
--   ghc-options:     -Wall -rtsopts
--   main-is:         range-bench.hs
