Name:           aern2-fnreps
version:        0.1.0.0
cabal-version:  >= 1.9.2
build-type:     Simple
homepage:       https://github.com/michalkonecny/aern2/aern2-fnreps
author:         Michal Konecny, Eike Neumann
maintainer:     Michal Konecny <mikkonecny@gmail.com>
copyright:      (c) 2015-2017 Michal Konecny, Eike Neumann
license:        BSD3
license-file:   LICENSE
stability:      experimental
tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.1
category:       Math
Synopsis:       compare real function representations
Description:    Define and compare various representations of univariate continuous real functions.

source-repository head
  type:     git
  location: https://github.com/mikkonecny/aern2.git
  subdir: aern2-fnreps

executable aern2-fnreps-ops
  build-depends:
    base == 4.*
    -- , arithmoi == 0.4.*
    -- , convertible >= 1.1.1.0 && < 1.2
    -- , lens == 4.13.*
    , psqueues == 0.2.*
    , containers == 0.5.*
    , mixed-types-num == 0.1.*
    , num-exceptions == 0.1.*
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
    , aern2-fun == 0.1.*
  extensions:
                    Arrows,
                    FlexibleContexts,
                    FlexibleInstances,
                    MultiParamTypeClasses,
                    RebindableSyntax,
                    TypeFamilies,
                    TypeOperators
  hs-source-dirs:  main
  ghc-options:     -O2 -Wall -rtsopts
  main-is:         fnreps-ops.hs

-- executable aern2-rootIsolation-bench
--   build-depends:
--                    base >= 4.4,
--                    aern2-fnreps ==0.1
--   extensions:
--                     Arrows,
--                     FlexibleContexts,
--                     FlexibleInstances,
--                     MultiParamTypeClasses,
--                     RebindableSyntax,
--                     TypeFamilies,
--                     TypeOperators
--   hs-source-dirs:  main
--   ghc-options:     -Wall -rtsopts
--   main-is:         rootIsolation-bench.hs
--
-- executable aern2-range-bench
--   build-depends:
--                    base >= 4.4,
--                    aern2-fnreps ==0.1
--   extensions:
--                     Arrows,
--                     FlexibleContexts,
--                     FlexibleInstances,
--                     MultiParamTypeClasses,
--                     RebindableSyntax,
--                     TypeFamilies,
--                     TypeOperators
--   hs-source-dirs:  main
--   ghc-options:     -Wall -rtsopts
--   main-is:         range-bench.hs
