name:           aern2-fun-plot
version:        0.1.0.0
cabal-version:  >= 1.9.2
build-type:     Simple
homepage:       https://github.com/michalkonecny/aern2
author:         Michal Konecny
maintainer:     Michal Konecny <mikkonecny@gmail.com>
copyright:      (c) 2015-2017 Michal Konecny
license:        BSD3
license-file:   LICENSE
stability:      experimental
tested-with:    GHC==7.10.3, GHC==8.0.2
category:       Math
synopsis:       Backend for plotting real functions
Description:
  Backend for plotting real functions in a browser-based UI.

source-repository head
  type:     git
  location: https://github.com/mikkonecny/aern2.git
  subdir: aern2-fun-plot

library
  hs-source-dirs:  server/src
  build-depends:
    base == 4.*
    , integer-logarithms >= 1.0 && < 1.1
    , containers == 0.5.*
    , psqueues == 0.2.*
    , convertible >= 1.1.1.0 && < 1.2
    , transformers >= 0.4 && < 0.6
    , lens >= 4.13 && < 4.16
    , servant >= 0.7.1
    , servant-server >= 0.7.1
    , servant-elm
    , elm-export
    , warp
    , aeson
    , wai
    , wai-extra
    , wai-make-assets
    , mixed-types-num >= 0.3.1 && < 0.4
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
    , aern2-fun == 0.1.*
  ghc-options:     -Wall -fno-warn-orphans
  extensions:
    DataKinds,
    RebindableSyntax,
    PostfixOperators,
    ScopedTypeVariables,
    DeriveGeneric,
    GeneralizedNewtypeDeriving,
    TypeFamilies,
    TypeOperators,
    ConstraintKinds,
    DefaultSignatures,
    MultiParamTypeClasses,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    Arrows
  exposed-modules:
    AERN2.RealFun.PlotService
    AERN2.RealFun.PlotService.API
    AERN2.RealFun.PlotService.App

executable aern2-fun-plot-example
  build-depends:
    base == 4.*
    , mixed-types-num >= 0.3.1 && < 0.4
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
    , aern2-fun == 0.1.*
    , aern2-fun-plot == 0.1.*
  hs-source-dirs:  example
  ghc-options:     -Wall -rtsopts
  extensions:
  extensions:
    DataKinds,
    RebindableSyntax,
    PostfixOperators,
    ScopedTypeVariables,
    DeriveGeneric,
    GeneralizedNewtypeDeriving,
    TypeFamilies,
    TypeOperators,
    ConstraintKinds,
    DefaultSignatures,
    MultiParamTypeClasses,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    Arrows
  main-is: Main.hs

-- test-suite spec
--   type:
--       exitcode-stdio-1.0
--   ghc-options:
--       -Wall
--   extensions:
--     RebindableSyntax,
--     PostfixOperators,
--     ScopedTypeVariables,
--     FlexibleContexts
--   hs-source-dirs:
--       test
--   main-is:
--       Spec.hs
--   build-depends:
--     base == 4.*
--     -- , mixed-types-num >= 0.3.1 && < 0.4
--     -- , aern2-mp
--     , aern2-real
--     , hspec >= 2.1 && < 2.3
--     -- , hspec-smallcheck >= 0.3 && < 0.5
--     , QuickCheck >= 2.7 && < 2.9
