name:           aern2-fun
version:        0.1.0.0
cabal-version:  >= 1.9.2
build-type:     Simple
homepage:       https://github.com/michalkonecny/aern2/aern2-fun
author:         Michal Konecny, Eike Neumann
maintainer:     Michal Konecny <mikkonecny@gmail.com>
copyright:      (c) 2015-2017 Michal Konecny, Eike Neumann
license:        BSD3
license-file:   LICENSE
stability:      experimental
tested-with:    GHC==7.8.4, GHC==7.10.3, GHC==8.0.1
category:       Math
synopsis:       Exact real functions
Description:
  TODO

source-repository head
  type:     git
  location: https://github.com/mikkonecny/aern2.git
  subdir: aern2-fun

library
  hs-source-dirs:  src
  build-depends:
    base == 4.*
    , containers == 0.5.*
    , psqueues == 0.2.*
    , arithmoi == 0.4.*
    , convertible >= 1.1.1.0 && < 1.2
    , hspec >= 2.1 && < 2.3
    -- , hspec-smallcheck >= 0.3 && < 0.5
    , QuickCheck >= 2.7 && < 2.9
    , transformers >= 0.4 && < 0.6
    , lens == 4.13.*
    , mixed-types-num == 0.1.*
    , num-exceptions == 0.1.*
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
    , vector

  ghc-options:     -Wall -O2 -fno-warn-orphans
  extensions:
    RebindableSyntax,
    PostfixOperators,
    ScopedTypeVariables,
    DeriveGeneric,
    GeneralizedNewtypeDeriving,
    TypeFamilies,
    TypeOperators,
    ConstraintKinds,
    DefaultSignatures,
    MultiParamTypeClasses,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    Arrows
  exposed-modules:
    AERN2.PQueue
    AERN2.Interval
    AERN2.RealFun.Operations
    AERN2.RealFun.Tests
    AERN2.RealFun.UnaryFun
    AERN2.RealFun.UnaryFun.Type
    AERN2.RealFun.UnaryFun.Evaluation
    AERN2.RealFun.UnaryFun.Integration
    AERN2.RealFun.UnaryDFun
    AERN2.RealFun.SineCosine
    AERN2.Poly
    AERN2.Poly.Conversion
    AERN2.Poly.Basics
    AERN2.Poly.Cheb
    AERN2.Poly.Cheb.Type
    AERN2.Poly.Cheb.Eval
    AERN2.Poly.Cheb.Derivative
    AERN2.Poly.Cheb.Integration
    AERN2.Poly.Cheb.MaximumMP
    AERN2.Poly.Cheb.MaximumInt
    AERN2.Poly.Cheb.Maximum
    AERN2.Poly.Cheb.DCT
    AERN2.Poly.Cheb.Ring
    AERN2.Poly.Cheb.Field
    AERN2.Poly.Cheb.Tests
    AERN2.Poly.Ball
    AERN2.Poly.Power
    AERN2.Poly.Power.Type
    AERN2.Poly.Power.SizeReduction
    AERN2.Poly.Power.Eval
    AERN2.Poly.Power.Roots
    AERN2.Poly.Power.SignedSubresultantMap
    AERN2.Poly.Power.SignedSubresultantVector
    AERN2.Poly.Power.SignedSubresultant
    AERN2.Poly.Power.RootsIntMap
    AERN2.Poly.Power.RootsIntVector
    AERN2.Poly.Power.RootsInt
    AERN2.Poly.Power.MaximumInt
    AERN2.Poly.Power.Maximum
    AERN2.PPoly
    AERN2.PPoly.Type
    AERN2.PPoly.Eval
    AERN2.PPoly.Maximum
    AERN2.PPoly.Division

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  extensions:
    RebindableSyntax,
    PostfixOperators,
    ScopedTypeVariables,
    FlexibleContexts
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
    base == 4.*
    -- , mixed-types-num
    -- , aern2-mp
    -- , aern2-real
    , aern2-fun
    , hspec >= 2.1 && < 2.3
    -- , hspec-smallcheck >= 0.3 && < 0.5
    , QuickCheck >= 2.7 && < 2.9

executable aern2-fun-chPoly-benchOp
  ghc-options:
      -Wall -O2
  extensions:
    RebindableSyntax,
    TypeFamilies,
    PostfixOperators,
    ScopedTypeVariables,
    FlexibleContexts,
    TypeSynonymInstances
  hs-source-dirs:
      bench
  main-is:
      aern2-fun-chPoly-benchOp.hs
  build-depends:
    base == 4.*
    , mixed-types-num == 0.1.*
    , num-exceptions == 0.1.*
    , aern2-mp == 0.1.*
    -- , aern2-real == 0.1.*
    , aern2-fun == 0.1.*
    , random
    , QuickCheck >= 2.7 && < 2.9
    , clock
