name:           aern2-fun
version:        0.1.0.0
cabal-version:  >= 1.9.2
build-type:     Simple
homepage:       https://github.com/michalkonecny/aern2
author:         Michal Konecny, Eike Neumann
maintainer:     Michal Konecny <mikkonecny@gmail.com>
copyright:      (c) 2015-2019 Michal Konecny, Eike Neumann
license:        BSD3
license-file:   LICENSE
stability:      experimental
category:       Math
synopsis:       Exact real functions
Description:
  TODO

source-repository head
  type:     git
  location: https://github.com/mikkonecny/aern2.git
  subdir: aern2-fun

library
  hs-source-dirs:  src
  build-depends:
    base == 4.*
    , containers >= 0.5
    , psqueues >= 0.2
    -- , integer-logarithms >= 1.0
    -- , convertible >= 1.1.1.0
    -- , regex-tdfa >= 1.2.1
    -- , bytestring >= 0.10
    , hspec >= 2.1
    -- , hspec-smallcheck >= 0.3 && < 0.5
    , QuickCheck >= 2.7
    -- , transformers >= 0.4
    -- , lens >= 4.13
    , mixed-types-num >= 0.4
    , aern2-mp == 0.1.*
    , aern2-real == 0.1.*
    -- , vector
    -- , memoize

  ghc-options:     -Wall -fno-warn-orphans
  extensions:
    RebindableSyntax,
    PostfixOperators,
    ScopedTypeVariables,
    DeriveGeneric,
    GeneralizedNewtypeDeriving,
    TypeFamilies,
    TypeOperators,
    ConstraintKinds,
    DefaultSignatures,
    MultiParamTypeClasses,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    Arrows
  exposed-modules:
    AERN2.PQueue
    AERN2.Interval
    AERN2.RealFun.Operations
    AERN2.RealFun.Tests
    AERN2.RealFun.SineCosine
